--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@react-oauth/google": "^0.13.4",
     "@tailwindcss/vite": "^4.1.18",
+    "date-fns": "^4.1.0",
+    "emoji-picker-react": "^4.16.1",
     "framer-motion": "^12.24.12",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
     "react-infinite-scroll-component": "^6.1.1",
+    "react-player": "^3.4.0",
     "react-router-dom": "^6.30.3",
     "react-toastify": "^11.0.5",
     "remixicon": "^4.8.0",
